fix: wrong color anlagengitter II

--- a/webapp/pages/presentation/anlagengitter/II/style.scss
+++ b/webapp/pages/presentation/anlagengitter/II/style.scss
@@ -334,6 +334,11 @@ table td, table th {
             border-bottom: none !important;
 
         }
+
+        .specialcell{
+            background-color: #e2e9b5 !important;
+            color: black;
+        }
     }
 
     .underlined-row {
